# MoneyPulse

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
backend/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  vercel.json
backend/api/alembic/: env.py
backend/api/alembic/versions/: 20260707_000001_initial_schema.py  20260707_000002_user_authentication.py  20260707_000003_bank_sync_foundation.py  20260712_000004_persistence_foundation.py  20260712_000005_csv_import_batches.py  20260712_000006_transaction_categorization_rules.py  20260712_000007_financial_onboarding.py
backend/api/app/: config.py  database.py  dependencies.py  errors.py  init_db.py  logging_utils.py  main.py  models.py  rate_limit.py  security.py  seed_demo.py
backend/api/app/adapters/: decision_engine_cli.mjs  decision_engine_cli.ts
backend/api/app/repositories/: accounts.py  bank_accounts.py  bank_connections.py  budgets.py  categories.py  checkpoints.py  financial_profiles.py  goals.py  (+6 more)
backend/api/tests/: conftest.py  test_accounts.py  test_auth.py  test_bank_provider_mock.py  test_bank_sync.py  test_before_you_buy.py  test_budgets.py  test_checkpoints.py  test_coach.py  test_copilot.py  test_cors.py  test_csv_import.py  test_decision.py  test_errors.py  test_financial_data.py  test_goals.py  test_health.py  test_me.py  test_migrations.py  test_onboarding.py  test_recurring_events.py  test_seed_demo.py  test_today.py  test_transaction_categorization.py  test_transactions.py
(+164 files in other folders)
