[project]
name = "moneypulse-api"
version = "0.1.0"
description = "MoneyPulse FastAPI backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3,<2.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "pydantic>=2.8.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[project.scripts]
moneypulse-init-db = "app.init_db:main"
moneypulse-seed-demo = "app.seed_demo:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "pytest>=8.2.0,<9.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
